Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28478

Assertion `mtr->get_log_mode() == MTR_LOG_NO_REDO' failed in void page_cur_insert_rec_write_log(const rec_t*, ulint, const rec_t*, dict_index_t*, mtr_t*)

    XMLWordPrintable

Details

    Description

      CREATE TEMPORARY TABLE t (c POINT NOT NULL,SPATIAL (c));
      INSERT INTO t SELECT POINTFROMTEXT ('POINT(0 0)') FROM seq_1_to_366;
      INSERT INTO t VALUES (POINT(3.7857669957337e-270,1.8033161362863e-130));
      

      Leads to:

      10.4.25 446ec646511adf4327f9f5d9414fc4cb75c8161c (Debug)

      mysqld: /test/10.4_dbg/storage/innobase/page/page0cur.cc:812: void page_cur_insert_rec_write_log(const rec_t*, ulint, const rec_t*, dict_index_t*, mtr_t*): Assertion `mtr->get_log_mode() == MTR_LOG_NO_REDO' failed.
      

      10.4.25 446ec646511adf4327f9f5d9414fc4cb75c8161c (Debug)

      Core was generated by `/test/MD020322-mariadb-10.4.25-linux-x86_64-dbg/bin/mysqld --no-defaults --core'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x153a20124700 (LWP 3362070))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x0000153a29527859 in __GI_abort () at abort.c:79
      #2  0x0000153a29527729 in __assert_fail_base (fmt=0x153a296bd588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55f8ed34f6d8 "mtr->get_log_mode() == MTR_LOG_NO_REDO", file=0x55f8ed34eeb0 "/test/10.4_dbg/storage/innobase/page/page0cur.cc", line=812, function=<optimized out>) at assert.c:92
      #3  0x0000153a29538f36 in __GI___assert_fail (assertion=assertion@entry=0x55f8ed34f6d8 "mtr->get_log_mode() == MTR_LOG_NO_REDO", file=file@entry=0x55f8ed34eeb0 "/test/10.4_dbg/storage/innobase/page/page0cur.cc", line=line@entry=812, function=function@entry=0x55f8ed34f700 "void page_cur_insert_rec_write_log(const rec_t*, ulint, const rec_t*, dict_index_t*, mtr_t*)") at assert.c:101
      #4  0x000055f8ecb8c839 in page_cur_insert_rec_write_log (insert_rec=insert_rec@entry=0x153a08951db6 "\031", rec_size=rec_size@entry=44, cursor_rec=cursor_rec@entry=0x153a08951d8a "", index=index@entry=0x1539c8020b90, mtr=mtr@entry=0x153a20120630) at /test/10.4_dbg/storage/innobase/page/page0cur.cc:812
      #5  0x000055f8ecb8d223 in page_cur_insert_rec_low (current_rec=0x153a08951d8a "", index=index@entry=0x1539c8020b90, rec=rec@entry=0x1539c806e736 "\031", offsets=<optimized out>, mtr=mtr@entry=0x153a20120630) at /test/10.4_dbg/storage/innobase/page/page0cur.cc:1470
      #6  0x000055f8ecd5126b in page_cur_tuple_insert (cursor=cursor@entry=0x153a201200c8, tuple=tuple@entry=0x1539c806e038, index=index@entry=0x1539c8020b90, offsets=offsets@entry=0x153a20120018, heap=heap@entry=0x153a20120008, n_ext=<optimized out>, mtr=0x153a20120630) at /test/10.4_dbg/storage/innobase/include/page0cur.inl:285
      #7  0x000055f8ecd57168 in btr_cur_optimistic_insert (flags=flags@entry=2, cursor=cursor@entry=0x153a201200c0, offsets=offsets@entry=0x153a20120018, heap=heap@entry=0x153a20120008, entry=entry@entry=0x1539c806e038, rec=rec@entry=0x153a20120070, big_rec=0x153a20120160, n_ext=<optimized out>, thr=0x1539c80231d0, mtr=0x153a20120630) at /test/10.4_dbg/storage/innobase/btr/btr0cur.cc:3609
      #8  0x000055f8ecc07ded in row_ins_sec_index_entry_low (flags=flags@entry=2, mode=33, mode@entry=2, index=index@entry=0x1539c8020b90, offsets_heap=<optimized out>, offsets_heap@entry=0x1539c806e6b0, heap=heap@entry=0x1539c806f5b0, entry=entry@entry=0x1539c806e038, trx_id=0, thr=0x1539c80231d0) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3112
      #9  0x000055f8ecc0e0ee in row_ins_sec_index_entry (index=index@entry=0x1539c8020b90, entry=entry@entry=0x1539c806e038, thr=thr@entry=0x1539c80231d0, check_foreign=check_foreign@entry=true) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3297
      #10 0x000055f8ecc0fe35 in row_ins_index_entry (thr=0x1539c80231d0, entry=0x1539c806e038, index=0x1539c8020b90) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3345
      #11 row_ins_index_entry_step (thr=0x1539c80231d0, node=0x1539c8022fa0) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3512
      #12 row_ins (thr=0x1539c80231d0, node=0x1539c8022fa0) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3671
      #13 row_ins_step (thr=thr@entry=0x1539c80231d0) at /test/10.4_dbg/storage/innobase/row/row0ins.cc:3821
      #14 0x000055f8ecc359de in row_insert_for_mysql (mysql_rec=mysql_rec@entry=0x1539c800e2e0 "\031", prebuilt=0x1539c8022ab0, ins_mode=ROW_INS_NORMAL) at /test/10.4_dbg/storage/innobase/row/row0mysql.cc:1401
      #15 0x000055f8eca9123e in ha_innobase::write_row (this=0x1539c80222b8, record=0x1539c800e2e0 "\031") at /test/10.4_dbg/storage/innobase/handler/ha_innodb.cc:8180
      #16 0x000055f8ec6dd15b in handler::ha_write_row (this=0x1539c80222b8, buf=0x1539c800e2e0 "\031") at /test/10.4_dbg/sql/handler.cc:6774
      #17 0x000055f8ec3d1cea in write_record (thd=thd@entry=0x1539c8000d90, table=table@entry=0x1539c8021450, info=info@entry=0x153a201219b0) at /test/10.4_dbg/sql/sql_insert.cc:2072
      #18 0x000055f8ec3de48f in mysql_insert (thd=thd@entry=0x1539c8000d90, table_list=0x1539c8013368, fields=@0x1539c8005ba0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55f8ed9ffca0 <end_of_list>, last = 0x1539c8005ba0, elements = 0}, <No data fields>}, values_list=@0x1539c8005be8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x1539c80141a0, last = 0x1539c80141a0, elements = 1}, <No data fields>}, update_fields=@0x1539c8005bd0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55f8ed9ffca0 <end_of_list>, last = 0x1539c8005bd0, elements = 0}, <No data fields>}, update_values=@0x1539c8005bb8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55f8ed9ffca0 <end_of_list>, last = 0x1539c8005bb8, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false) at /test/10.4_dbg/sql/sql_insert.cc:1078
      #19 0x000055f8ec4192d9 in mysql_execute_command (thd=thd@entry=0x1539c8000d90) at /test/10.4_dbg/sql/sql_parse.cc:4598
      #20 0x000055f8ec421071 in mysql_parse (thd=thd@entry=0x1539c8000d90, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x153a20123490, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_parse.cc:7995
      #21 0x000055f8ec423a9f in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1539c8000d90, packet=packet@entry=0x1539c801a361 "INSERT INTO t VALUES (POINT(3.7857669957337e-270,1.8033161362863e-130))", packet_length=packet_length@entry=71, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_class.h:1201
      #22 0x000055f8ec42733d in do_command (thd=0x1539c8000d90) at /test/10.4_dbg/sql/sql_parse.cc:1373
      #23 0x000055f8ec565697 in do_handle_one_connection (connect=connect@entry=0x55f8f0c37060) at /test/10.4_dbg/sql/sql_connect.cc:1420
      #24 0x000055f8ec5657b6 in handle_one_connection (arg=0x55f8f0c37060) at /test/10.4_dbg/sql/sql_connect.cc:1316
      #25 0x0000153a29a36609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #26 0x0000153a29624293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.2.44 (Debug)

      mysqld: /test/10.2_dbg/storage/innobase/page/page0cur.cc:821: void page_cur_insert_rec_write_log(const rec_t*, ulint, const rec_t*, dict_index_t*, mtr_t*): Assertion `mtr->get_log_mode() == MTR_LOG_NO_REDO' failed.
      

      10.2.44 (Debug)

      Core was generated by `/test/MD020322-mariadb-10.2.44-linux-x86_64-dbg/bin/mysqld --no-defaults --core'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x150634dde700 (LWP 3362066))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x000055bf16337bb8 in my_write_core (sig=sig@entry=6) at /test/10.2_dbg/mysys/stacktrace.c:382
      #2  0x000055bf15c1c123 in handle_fatal_signal (sig=6) at /test/10.2_dbg/sql/signal_handler.cc:355
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000015064ff02859 in __GI_abort () at abort.c:79
      #6  0x000015064ff02729 in __assert_fail_base (fmt=0x150650098588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55bf164ff100 "mtr->get_log_mode() == MTR_LOG_NO_REDO", file=0x55bf164fe960 "/test/10.2_dbg/storage/innobase/page/page0cur.cc", line=821, function=<optimized out>) at assert.c:92
      #7  0x000015064ff13f36 in __GI___assert_fail (assertion=assertion@entry=0x55bf164ff100 "mtr->get_log_mode() == MTR_LOG_NO_REDO", file=file@entry=0x55bf164fe960 "/test/10.2_dbg/storage/innobase/page/page0cur.cc", line=line@entry=821, function=function@entry=0x55bf164ff0a0 "void page_cur_insert_rec_write_log(const rec_t*, ulint, const rec_t*, dict_index_t*, mtr_t*)") at assert.c:101
      #8  0x000055bf15ec9968 in page_cur_insert_rec_write_log (insert_rec=insert_rec@entry=0x150639c25ebe "\031", rec_size=rec_size@entry=44, cursor_rec=cursor_rec@entry=0x150639c25e92 "", index=index@entry=0x1505f0020580, mtr=mtr@entry=0x150634ddb0e0) at /test/10.2_dbg/storage/innobase/include/mtr0mtr.inl:190
      #9  0x000055bf15ecb353 in page_cur_insert_rec_low (current_rec=0x150639c25e92 "", index=index@entry=0x1505f0020580, rec=rec@entry=0x1505f002aae6 "\031", offsets=<optimized out>, mtr=mtr@entry=0x150634ddb0e0) at /test/10.2_dbg/storage/innobase/page/page0cur.cc:1457
      #10 0x000055bf16045386 in page_cur_tuple_insert (cursor=cursor@entry=0x150634dda418, tuple=tuple@entry=0x1505f002a4f8, index=index@entry=0x1505f0020580, offsets=offsets@entry=0x150634dda368, heap=heap@entry=0x150634dda358, n_ext=0, mtr=0x150634ddb0e0, use_cache=false) at /test/10.2_dbg/storage/innobase/include/page0cur.inl:291
      #11 0x000055bf1604a4eb in btr_cur_optimistic_insert (flags=flags@entry=2, cursor=cursor@entry=0x150634dda410, offsets=offsets@entry=0x150634dda368, heap=heap@entry=0x150634dda358, entry=entry@entry=0x1505f002a4f8, rec=rec@entry=0x150634dda3c0, big_rec=0x150634dda4b0, n_ext=<optimized out>, thr=0x1505f0022a98, mtr=0x150634ddb0e0) at /test/10.2_dbg/storage/innobase/btr/btr0cur.cc:3253
      #12 0x000055bf15f2592d in row_ins_sec_index_entry_low (flags=flags@entry=2, mode=33, mode@entry=2, index=index@entry=0x1505f0020580, offsets_heap=<optimized out>, offsets_heap@entry=0x1505f002aa60, heap=heap@entry=0x1505f002b620, entry=entry@entry=0x1505f002a4f8, trx_id=0, thr=0x1505f0022a98) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3057
      #13 0x000055bf15f2a2ae in row_ins_sec_index_entry (index=index@entry=0x1505f0020580, entry=entry@entry=0x1505f002a4f8, thr=thr@entry=0x1505f0022a98) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3214
      #14 0x000055bf15f2b432 in row_ins_index_entry (thr=0x1505f0022a98, entry=0x1505f002a4f8, index=0x1505f0020580) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3261
      #15 row_ins_index_entry_step (thr=0x1505f0022a98, node=0x1505f0022858) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3410
      #16 row_ins (thr=0x1505f0022a98, node=0x1505f0022858) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3547
      #17 row_ins_step (thr=thr@entry=0x1505f0022a98) at /test/10.2_dbg/storage/innobase/row/row0ins.cc:3671
      #18 0x000055bf15f44e72 in row_insert_for_mysql (mysql_rec=mysql_rec@entry=0x1505f000c1e0 "\031", prebuilt=0x1505f0022360) at /test/10.2_dbg/storage/innobase/row/row0mysql.cc:1408
      #19 0x000055bf15e1e9ad in ha_innobase::write_row (this=0x1505f0021bd8, record=0x1505f000c1e0 "\031") at /test/10.2_dbg/storage/innobase/handler/ha_innodb.cc:8285
      #20 0x000055bf15c2a420 in handler::ha_write_row (this=0x1505f0021bd8, buf=0x1505f000c1e0 "\031") at /test/10.2_dbg/sql/handler.cc:6118
      #21 0x000055bf159f1495 in write_record (thd=thd@entry=0x1505f0000d90, table=table@entry=0x1505f0020fd0, info=info@entry=0x150634ddbcd0) at /test/10.2_dbg/sql/sql_insert.cc:1951
      #22 0x000055bf159fcb5b in mysql_insert (thd=thd@entry=0x1505f0000d90, table_list=0x1505f00112d8, fields=@0x1505f00056c8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bf16b48660 <end_of_list>, last = 0x1505f00056c8, elements = 0}, <No data fields>}, values_list=@0x1505f0005710: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x1505f0011b48, last = 0x1505f0011b48, elements = 1}, <No data fields>}, update_fields=@0x1505f00056f8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bf16b48660 <end_of_list>, last = 0x1505f00056f8, elements = 0}, <No data fields>}, update_values=@0x1505f00056e0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bf16b48660 <end_of_list>, last = 0x1505f00056e0, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false) at /test/10.2_dbg/sql/sql_insert.cc:1066
      #23 0x000055bf15a15b29 in mysql_execute_command (thd=thd@entry=0x1505f0000d90) at /test/10.2_dbg/sql/sql_parse.cc:4217
      #24 0x000055bf15a1c607 in mysql_parse (thd=thd@entry=0x1505f0000d90, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x150634ddd540, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_dbg/sql/sql_parse.cc:7793
      #25 0x000055bf15a1f107 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1505f0000d90, packet=packet@entry=0x1505f00195e1 "INSERT INTO t VALUES (POINT(3.7857669957337e-270,1.8033161362863e-130))", packet_length=packet_length@entry=71, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_dbg/sql/sql_class.h:1109
      #26 0x000055bf15a21ef5 in do_command (thd=0x1505f0000d90) at /test/10.2_dbg/sql/sql_parse.cc:1381
      #27 0x000055bf15b26476 in do_handle_one_connection (connect=connect@entry=0x55bf1978f840) at /test/10.2_dbg/sql/sql_connect.cc:1336
      #28 0x000055bf15b266a1 in handle_one_connection (arg=0x55bf1978f840) at /test/10.2_dbg/sql/sql_connect.cc:1241
      #29 0x000015065040b609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #30 0x000015064ffff293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.2.44 (dbg), 10.3.35 (dbg), 10.4.25 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.44 (opt), 10.3.35 (opt), 10.4.25 (opt), 10.5.16 (dbg), 10.5.16 (opt), 10.6.8 (dbg), 10.6.8 (opt), 10.7.4 (opt), 10.7.4 (dbg), 10.8.3 (dbg), 10.8.3 (opt), 10.9.0 (dbg)

      Attachments

        Activity

          People

            marko Marko Mäkelä
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.